--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     
 
 
-    <title>Perfect Recipe</title>
+    <title>Carl's Foods</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
